chore(fix): small fix grid spacings

--- a/src/styles/grid/_mixins.scss
+++ b/src/styles/grid/_mixins.scss
@@ -14,8 +14,8 @@
   #{$list} {
     position: relative;
     width: 100%;
-    padding-left: ceil(($grid-gutter / 2));
-    padding-right: floor(($grid-gutter / 2));
+    padding-left: $grid-gutter / 2;
+    padding-right: $grid-gutter / 2;
   }
 }
 
